feat(core): Support IPv6Packets